2015-12-08  Corinna Vinschen  <corinna@vinschen.de>

	* ntdll.h (FILE_ID_BOTH_DIR_INFORMATION): Rename FileId to IndexNumber
	to align with Microsoft naming scheme.
	(FILE_INTERNAL_INFORMATION): Ditto.
	* fhandler_disk_file.cc: Rename FileId to IndexNumber throughout.
	* syscalls.cc: Ditto.

2015-12-07  Johannes Schindelin  <johannes.schindelin@gmx.de>

	* mount.cc (mount_info::from_fstab_line): Support mounting the current
	user's temp folder as /tmp/.  This is particularly useful a feature
	when Cygwin's own files are write-protected.

2015-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/select.h: Move select(2) macros from newlib's sys/types.h
	here.  Rename howmany to _howmany to unclutter namespace. Move file to
	newlib.
	* libc/rexex.cc: Add declaration for cygwin_gethostname.
	* poll.cc: Include sys/param.h and locale select.h.
	* select.h (cygwin_select): Declare.
	* uname.cc: Declare cygwin_gethostname.
	* winsup.h: Drop declarations of cygwin_select and cygwin_gethostname.

2015-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc: Semi-revert commit 12743c2d5d2721f3a80b4d7671a349be03c1f520.
	(dll_crt0_0): Drop setting wow64_needs_stack_adjustment on 64 bit.
	(_dll_crt0): Split out 64 bit code again and always create new main
	thread stack, unless forked off from the non main thread in the parent.
	Call create_new_main_thread_stack with parent stack commitsize if
	started from the parent's main thread.
	Only call child_info_fork::alloc_stack for the latter case on 64 bit.
	Slightly rearrange moving rsp and rbp to new stack and document how.
	Revert 32 bit wow64 handling to its former self.
	* miscfunc.cc (create_new_main_thread_stack): Take a commitsize
	parameter and use it if it's not 0.  Don't set _main_tls here, it's
	done in the caller _dll_crt0 anyway.  Return stackbase - 16 bytes,
	rather than stacklimit (which was very wrong anyway).
	* miscfuncs.h (create_new_main_thread_stack): Accommodate declaration